--- a/src/com/rmate/employeemanager/MainView.fxml
+++ b/src/com/rmate/employeemanager/MainView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -20,5 +21,6 @@
       <Button fx:id="addButton" layoutX="26.0" layoutY="14.0" mnemonicParsing="false" text="Add" />
       <Button fx:id="editButton" layoutX="73.0" layoutY="14.0" mnemonicParsing="false" text="Edit" />
       <Button fx:id="deleteButton" layoutX="118.0" layoutY="14.0" mnemonicParsing="false" text="Delete" />
+      <ChoiceBox fx:id="departmentChoiceBox" layoutX="419.0" layoutY="14.0" prefWidth="150.0" />
     </children>
 </AnchorPane>
